deploy: a650d2e3a2fed277776dbb2a09a5931f05c12ba7

--- a/Definitions.html
+++ b/Definitions.html
@@ -19,39 +19,35 @@
 <div class='tcolorbox-content'><!-- l. 9 --><p class='noindent'><span class='underline'><span class='rm-lmbx-10x-x-109'>Set Elements</span></span> </p>
    <ul class='itemize1'>
    <li class='itemize'><span class='rm-lmbx-10x-x-109'>Set (</span><!-- l. 11 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>𝕊</mi></math><span class='rm-lmbx-10x-x-109'>):</span>
-   A bundle of elements: <!-- l. 11 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>𝕊</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mo class='MathClass-open' stretchy='false'>{</mo><mi>a</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>b</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>c</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mo>…</mo><mo class='MathClass-close' stretchy='false'>}</mo></mrow></math>
+   A bundle of elements: <!-- l. 11 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>𝕊</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mo class='MathClass-open' stretchy='false'>{</mo><mi>a</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>b</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>c</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mstyle class='text'><mtext> </mtext></mstyle><mstyle class='text'><mtext></mtext><mstyle class='math'><mo class='MathClass-rel' stretchy='false'>⋯</mo><mspace class='thinspace' width='0.17em'></mspace></mstyle><mtext></mtext></mstyle><mstyle class='text'><mtext> </mtext></mstyle><mo class='MathClass-punc' stretchy='false'>,</mo><mi>n</mi><mo class='MathClass-close' stretchy='false'>}</mo></mrow></math>
   </li>
   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Set Operations </span><!-- l. 12 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mtext class='MathClass-open' stretchy='false'>(+,⋅)</mtext></mstyle></math><span class='rm-lmbx-10x-x-109'>:</span>
-   We consider two operations on <!-- l. 12 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>𝕊</mi></math>
-    between any two elements <!-- l. 12 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>b</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>𝕊</mi></mrow></math>
+   A       set       defines       two       operations       between       any       two       elements
+    <!-- l. 12 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>b</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>𝕊</mi></mrow></math>
     as operands: addition <!-- l. 12 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mtext class='MathClass-open' stretchy='false'>(+)</mtext></mrow></math>
     and multiplication <!-- l. 12 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mtext class='MathClass-open' stretchy='false'>(⋅)</mtext></mrow></math>
     </li>
-    <li class='itemize'><span class='rm-lmbx-10x-x-109'>Additive Identity (</span><!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mn>0</mn></mrow><mrow><mtext class='MathClass-open' stretchy='false'>(+)</mtext></mrow></msub></math>
-     <span class='rm-lmbx-10x-x-109'>often written </span><!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mn>0</mn></math><span class='rm-lmbx-10x-x-109'>):</span>
+    <li class='itemize'><span class='rm-lmbx-10x-x-109'>Additive Identity (</span><!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mn>1</mn></mrow><mrow><mtext class='MathClass-open' stretchy='false'>(+)</mtext></mrow></msub></math><span class='rm-lmbx-10x-x-109'>):</span>
    An element <!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>i</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>𝕊</mi></mrow></math>
     is an additive identity if for all <!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>𝕊</mi></mrow></math>,
     <!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>i</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>a</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>a</mi></mrow></math>.
     </li>
-    <li class='itemize'><span class='rm-lmbx-10x-x-109'>Multiplicative Identity (</span><!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mn>1</mn></mrow><mrow><mtext class='MathClass-open' stretchy='false'>(⋅)</mtext></mrow></msub></math>
-     <span class='rm-lmbx-10x-x-109'>often written </span><!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mn>1</mn></math><span class='rm-lmbx-10x-x-109'>):</span>
+    <li class='itemize'><span class='rm-lmbx-10x-x-109'>Multiplicative Identity (</span><!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mn>1</mn></mrow><mrow><mtext class='MathClass-open' stretchy='false'>(⋅)</mtext></mrow></msub></math><span class='rm-lmbx-10x-x-109'>):</span>
    An element <!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>i</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>𝕊</mi></mrow></math>
     is a multiplicative identity if for all <!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>𝕊</mi></mrow></math>,
     <!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>i</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>a</mi></mrow></math>
    </li>
-   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Additive Inverse (</span><!-- l. 15 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msubsup><mrow><mi>a</mi></mrow><mrow><mtext class='MathClass-open' stretchy='false'>(+)</mtext></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msubsup></math><span class='rm-lmbx-10x-x-109'>):</span>
+   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Additive Inverse (</span><!-- l. 15 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>a</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msup></math><span class='rm-lmbx-10x-x-109'>):</span>
    For each <!-- l. 15 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>𝕊</mi></mrow></math>,
-    its additive inverse <!-- l. 15 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msubsup><mrow><mi>a</mi></mrow><mrow><mtext class='MathClass-open' stretchy='false'>(+)</mtext></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msubsup></math>,
-    often written <!-- l. 15 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow> <mo class='MathClass-bin' stretchy='false'>−</mo><mi>a</mi></mrow></math>,
-    is defined as an element such that <!-- l. 15 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <msubsup><mrow><mi>a</mi></mrow><mrow><mtext class='MathClass-open' stretchy='false'>(+)</mtext></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msubsup> <mo class='MathClass-rel' stretchy='false'>=</mo> <msub><mrow><mn>0</mn></mrow><mrow><mtext class='MathClass-open' stretchy='false'>(+)</mtext></mrow></msub></mrow></math>
+    its additive inverse <!-- l. 15 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>a</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msup></math>
+     is defined as an element such that <!-- l. 15 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <msup><mrow><mi>a</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msup> <mo class='MathClass-rel' stretchy='false'>=</mo> <msub><mrow><mn>1</mn></mrow><mrow><mtext class='MathClass-open' stretchy='false'>(+)</mtext></mrow></msub></mrow></math>
      (i.e., additive identity)
     </li>
-    <li class='itemize'><span class='rm-lmbx-10x-x-109'>Multiplicative Inverse (</span><!-- l. 16 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msubsup><mrow><mi>a</mi></mrow><mrow><mtext class='MathClass-open' stretchy='false'>(⋅)</mtext></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msubsup></math><span class='rm-lmbx-10x-x-109'>):</span>
+    <li class='itemize'><span class='rm-lmbx-10x-x-109'>Multiplicative Inverse (</span><!-- l. 16 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>a</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msup></math><span class='rm-lmbx-10x-x-109'>):</span>
    For each <!-- l. 16 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>𝕊</mi></mrow></math>
-    that is invertible with respect to <!-- l. 16 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mtext class='MathClass-open' stretchy='false'>(⋅)</mtext></mrow></math>,
-    its multiplicative inverse <!-- l. 16 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msubsup><mrow><mi>a</mi></mrow><mrow><mtext class='MathClass-open' stretchy='false'>(⋅)</mtext></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msubsup></math>,
-    often written <!-- l. 16 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>a</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msup></math>,
-    is defined as an element such that <!-- l. 16 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><msubsup><mrow><mi>a</mi></mrow><mrow><mtext class='MathClass-open' stretchy='false'>(⋅)</mtext></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msubsup> <mo class='MathClass-rel' stretchy='false'>=</mo> <msub><mrow><mn>1</mn></mrow><mrow><mtext class='MathClass-open' stretchy='false'>(⋅)</mtext></mrow></msub></mrow></math>
+    except for <!-- l. 16 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>0</mn></mrow></math>,
+    its multiplicative inverse <!-- l. 16 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>a</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msup></math>
+     is defined as an element such that <!-- l. 16 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><msup><mrow><mi>a</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msup> <mo class='MathClass-rel' stretchy='false'>=</mo> <msub><mrow><mn>1</mn></mrow><mrow><mtext class='MathClass-open' stretchy='false'>(⋅)</mtext></mrow></msub></mrow></math>
      (i.e., multiplicative identity)</li></ul>
 <!-- l. 19 --><p class='noindent'><!-- l. 19 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!-- l. 21 --><p class='noindent'><span class='underline'><span class='rm-lmbx-10x-x-109'>Element Operation Features</span></span> </p>
@@ -69,9 +65,7 @@
     </li>
     <li class='itemize'><span class='rm-lmbx-10x-x-109'>Commutative: </span><!-- l. 25 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>b</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>b</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>a</mi></mrow></math>
    </li>
-   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Distributive: </span>When both <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mtext class='MathClass-open' stretchy='false'>(+)</mtext></mrow></math>
-    and <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mtext class='MathClass-open' stretchy='false'>(⋅)</mtext></mrow></math>
-    are defined, <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mo class='MathClass-open' stretchy='false'>(</mo><mi>b</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>c</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <mo class='MathClass-open' stretchy='false'>(</mo><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>b</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-bin' stretchy='false'>+</mo> <mo class='MathClass-open' stretchy='false'>(</mo><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>c</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math></li></ul>
+   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Distributive: </span><!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mo class='MathClass-open' stretchy='false'>(</mo><mi>b</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>c</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <mo class='MathClass-open' stretchy='false'>(</mo><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>b</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-bin' stretchy='false'>+</mo> <mo class='MathClass-open' stretchy='false'>(</mo><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>c</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math></li></ul>
 <!-- l. 30 --><p class='noindent'><!-- l. 30 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!-- l. 32 --><p class='noindent'><span class='underline'><span class='rm-lmbx-10x-x-109'>Group Types</span></span> </p>
    <ul class='itemize1'>
@@ -80,17 +74,16 @@
     or <!-- l. 34 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mo class='MathClass-bin' stretchy='false'>⋅</mo></math>)
     </li>
     <li class='itemize'>
-    <!-- l. 35 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Monoid:   </span>A    monoid    is    a    semigroup,    plus    it    has    an    identity    element
-    <!-- l. 35 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>e</mi></math>,
-    which returns the other operand over the set operation.
+    <!-- l. 35 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Monoid: </span>A monoid is a semigroup, plus it has an identity element, which returns the
+    other operand over the set operation.
     </p><!-- l. 37 --><p class='noindent'>(e.g., <!-- l. 37 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mn>0</mn></math>
     is the identity element for <!-- l. 37 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mo class='MathClass-bin' stretchy='false'>+</mo></math>
     operator, <!-- l. 37 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mn>1</mn></math>
     is the identity element for the <!-- l. 37 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mo class='MathClass-bin' stretchy='false'>⋅</mo></math>
   operator)
     </p></li>
-    <li class='itemize'><span class='rm-lmbx-10x-x-109'>Group: </span>A group is a monoid, and every element has an inverse with respect to the
-    operation.
+    <li class='itemize'><span class='rm-lmbx-10x-x-109'>Group: </span>A group is a monoid, plus every element has an inverse (except for that of 0, the
+    identity)
     </li>
     <li class='itemize'><span class='rm-lmbx-10x-x-109'>Abelian Group: </span>An abelian group is a group, plus its operation is commutative.</li></ul>
  
