--- a/Examples.html
+++ b/Examples.html
@@ -52,26 +52,25 @@ because: </p>
    its multiplicative inverse is <!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle displaystyle='true'><mfrac><mrow><mn>1</mn>
 </mrow><mrow><mi>a</mi></mrow></mfrac></mstyle></math>,
    but this is not necessarily an integer (<!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-rel' stretchy='false'>∉</mo><mi>ℤ</mi></mrow></math>),
-   therefore not every element has a multiplicative inverse, so <!-- l. 62 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>ℤ</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mo class='MathClass-bin' stretchy='false'>⋅</mo><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
-   is not a group (though it is a monoid).</li></ul>
+   and thus breaks the closure property.</li></ul>
 <!-- l. 64 --><p class='noindent'><!-- l. 64 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
-</p><!-- l. 66 --><p class='noindent'><!-- l. 66 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>ℝ</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>×</mo></mrow></msup></math>
-(i.e., the set of all nonzero real numbers) is an abelian group under multiplication
+</p><!-- l. 66 --><p class='noindent'><!-- l. 66 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>ℝ</mi></math>
+(i.e., the set of all real numbers) is an abelian group under multiplication
 (<!-- l. 66 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mo class='MathClass-bin' stretchy='false'>⋅</mo></math>),
 because: </p>
    <ul class='itemize1'>
-   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Closed: </span>For any real number <!-- l. 68 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>b</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <msup><mrow><mi>ℝ</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>×</mo></mrow></msup></mrow></math>,
+   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Closed: </span>For any real number <!-- l. 68 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>b</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>ℝ</mi></mrow></math>,
    <!-- l. 68 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>b</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>c</mi></mrow></math>
-   is also a real number (<!-- l. 68 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow> <mo class='MathClass-rel' stretchy='false'>∈</mo> <msup><mrow><mi>ℝ</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>×</mo></mrow></msup></mrow></math>).
+   is also a real number (<!-- l. 68 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>ℝ</mi></mrow></math>).
    </li>
-   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Associative: </span>For any real number <!-- l. 69 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>b</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>c</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <msup><mrow><mi>ℝ</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>×</mo></mrow></msup></mrow></math>,
+   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Associative: </span>For any real number <!-- l. 69 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>b</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>c</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>ℝ</mi></mrow></math>,
    <!-- l. 69 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>b</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>c</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mo class='MathClass-open' stretchy='false'>(</mo><mi>b</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>c</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>.
    </li>
-   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Identity: </span>The multiplicative identity is 1, as for any real number <!-- l. 70 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <msup><mrow><mi>ℝ</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>×</mo></mrow></msup></mrow></math>,
+   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Identity: </span>The multiplicative identity is 1, as for any real number <!-- l. 70 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>ℝ</mi></mrow></math>,
    <!-- l. 70 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mn>1</mn> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>a</mi></mrow></math>.
    </li>
-   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Inverse: </span>For each real number <!-- l. 71 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <msup><mrow><mi>ℝ</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>×</mo></mrow></msup></mrow></math>,
-   its multiplicative inverse is <!-- l. 71 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle displaystyle='true'><mfrac><mrow><mn>1</mn>
+   <li class='itemize'><span class='rm-lmbx-10x-x-109'>Inverse: </span>For each real number <!-- l. 71 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>ℝ</mi></mrow></math>
+   (except for 0, the identity), its multiplicative inverse is <!-- l. 71 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle displaystyle='true'><mfrac><mrow><mn>1</mn>
 </mrow><mrow><mi>a</mi></mrow></mfrac></mstyle></math>,
    which is a real number (<!-- l. 71 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>ℝ</mi></mrow></math>).</li></ul>
                                                                                          
