--- a/Overview.html
+++ b/Overview.html
@@ -18,8 +18,8 @@
 <span class='rm-lmbx-10x-x-109'>Integer Modulo</span></p></div> 
 <div class='tcolorbox-content'>   <ul class='itemize1'>
    <li class='itemize'>
-   <!-- l. 14 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Modulo </span>is the operation of computing the remainder obtained when one number is
-    divided by another. <span class='rm-lmbx-10x-x-109'>modulo </span>is often abbreviated as <span class='rm-lmbx-10x-x-109'>mod</span>.
+   <!-- l. 14 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>modulo </span><span style='color:#000000;'>is the operation of computing the remainder obtained when one number is divided
+    by another</span>. <span class='rm-lmbx-10x-x-109'>modulo </span>is often abbreviated as <span class='rm-lmbx-10x-x-109'>mod</span>.
     </p><!-- l. 16 --><p class='noindent'><!-- l. 16 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
     </p></li>
     <li class='itemize'>
@@ -28,26 +28,26 @@
    <span class='rm-lmbx-10x-x-109'>(i.e., </span><!-- l. 18 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mstyle mathvariant='bold'><mi>𝐚</mi></mstyle><mstyle mathvariant='bold'><mstyle class='text'><mtext> 𝐦𝐨𝐝𝐮𝐥𝐨 </mtext></mstyle><mi>𝐪</mi></mstyle></mrow></math><span class='rm-lmbx-10x-x-109'>)</span>
    is the remainder after dividing <!-- l. 18 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>a</mi></math>
    by <!-- l. 18 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>,
-    which is always an element of <!-- l. 18 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>{</mo><mn>0</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>1</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>2</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>3</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mo class='MathClass-rel' stretchy='false'>⋯</mo><mspace class='thinspace' width='0.17em'></mspace><mo class='MathClass-punc' stretchy='false'>,</mo><mi>q</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>}</mo></mrow></math>.
+    which is always <span style='color:#000000;'>an element of</span> <!-- l. 18 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>{</mo><mn>0</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>1</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>2</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mn>3</mn><mo class='MathClass-punc' stretchy='false'>,</mo><mo class='MathClass-rel' stretchy='false'>⋯</mo><mspace class='thinspace' width='0.17em'></mspace><mo class='MathClass-punc' stretchy='false'>,</mo><mi>q</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>}</mo></mrow></math>.
     For example, <!-- l. 18 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mn>7</mn><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mn>5</mn> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>2</mn></mrow></math>,
     because the remainder of dividing 7 by 5 is 2.
     </p><!-- l. 20 --><p class='noindent'><!-- l. 20 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
     </p></li>
     <li class='itemize'>
-    <!-- l. 22 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Modulus: </span>Given <!-- l. 22 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mi>𝐚</mi></mstyle></math>
+    <!-- l. 22 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>modulus: </span>Given <!-- l. 22 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mi>𝐚</mi></mstyle></math>
    mod <!-- l. 22 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mi>𝐪</mi></mstyle></math>,
-    we call the divisor <!-- l. 22 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>
-   the modulus, whereas <span class='rm-lmri-10x-x-109'>modulo </span>refers to the operation.
+    we call <span style='color:#000000;'>the divisor</span> <!-- l. 22 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>
+   the modulus, whereas <span style='color:#000000;'><span class='rm-lmri-10x-x-109'>modulo </span>refers to the operation</span>.
     </p><!-- l. 24 --><p class='noindent'><!-- l. 24 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
     </p></li>
     <li class='itemize'>
     <!-- l. 26 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Modulo Congruence (</span><!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-rel' stretchy='false'>≡</mo></mstyle></math><span class='rm-lmbx-10x-x-109'>):</span>
    <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>a</mi></math>
-   is congruent to <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>b</mi></math>
-   modulo <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>
+   is congruent <span style='color:#000000;'>to</span> <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>b</mi></math>
+   modulo <span style='color:#000000;'><!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math></span>
    (i.e., <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>≡</mo><mi>b</mi><mstyle class='text'><mtext class='textbf' mathvariant='bold'> 𝐦𝐨𝐝 </mtext></mstyle><mi>q</mi></mrow></math>)
     if       they       have       the       same       remainder       when       divided       by
-    <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>.
+    <span style='color:#000000;'><!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math></span>.
     For example, <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mn>5</mn> <mo class='MathClass-rel' stretchy='false'>≡</mo><mn>12</mn><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mn>7</mn></mrow></math>,
     because <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mn>5</mn><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mn>7</mn> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>5</mn></mrow></math>
     and <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mn>12</mn><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mn>7</mn> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>5</mn></mrow></math>.
@@ -57,14 +57,14 @@
    divided by <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>
    is the same as the remainder of <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>b</mi></math>
    divided by <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>.
-    Note that this notation differs from <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>b</mi><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mi>q</mi></mrow></math>,
+    <span style='color:#000000;'>Note that this notation differs from <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>b</mi><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mi>q</mi></mrow></math>,
     which states that <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>a</mi></math>
    equals the remainder of <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>b</mi></math>
-   divided by <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>.
+   divided by <!-- l. 26 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>.</span>
     </p><!-- l. 28 --><p class='noindent'><!-- l. 28 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
     </p></li>
     <li class='itemize'>
-    <!-- l. 30 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Congruence </span><span class='rm-lmbxi-10x-x-109'>vs. </span><span class='rm-lmbx-10x-x-109'>Equality:</span>
+    <!-- l. 30 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Congruence </span><span style='color:#000000;'><span class='rm-lmbxi-10x-x-109'>vs.</span></span> <span class='rm-lmbx-10x-x-109'>Equality:</span>
    </p><!-- l. 32 --><p class='noindent'><!-- l. 32 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>≡</mo><mi>b</mi><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mi>q</mi><mo class='MathClass-rel' stretchy='false'>⟺</mo><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>b</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>k</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>q</mi></mrow></math>
      (for some integer <!-- l. 32 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>k</mi></math>)
     </p><!-- l. 34 --><p class='noindent'><!-- l. 34 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
@@ -73,7 +73,7 @@
    are congruent modulo <!-- l. 36 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>
    if and only if <!-- l. 36 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>a</mi></math>
    and <!-- l. 36 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>b</mi></math>
-   differ by some multiple of <!-- l. 36 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>.
+   <span style='color:#000000;'>differ by</span> some multiple of <!-- l. 36 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>.
     For example, <!-- l. 36 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mn>5</mn> <mo class='MathClass-rel' stretchy='false'>≡</mo><mn>12</mn><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mn>7</mn><mo class='MathClass-rel' stretchy='false'>⟺</mo><mn>5</mn> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>12</mn> <mo class='MathClass-bin' stretchy='false'>+</mo> <mo class='MathClass-open' stretchy='false'>(</mo><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mn>7</mn></mrow></math>
 </p>
     </li></ul>
