--- a/Theorems.html
+++ b/Theorems.html
@@ -8,27 +8,34 @@
 <meta content='index.tex' name='src' /> 
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
-   <!-- l. 38 --><div class='crosslinks'><p class='noindent'>[<a href='Examples1.html'>prev</a>][<a href='Field.html#Theorems.html'>parent</a>]</p></div>
+   <!-- l. 39 --><div class='crosslinks'><p class='noindent'>[<a href='Examples1.html'>prev</a>][<a href='Field.html#Theorems.html'>parent</a>]</p></div>
    <h4 class='subsectionHead' id='theorems'><span class='titlemark'>A-3.3   </span> <a id='x15-17000A-3.3'></a>Theorems</h4>
    <div class='tcolorbox tcolorbox' id='tcolobox-7'>     
 <div class='tcolorbox-title'>
-<!-- l. 46 --><p class='indent'>   <!-- l. 46 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-open' stretchy='false'>⟨</mo></mstyle></math><span class='rm-lmbx-10x-x-109'>Theorem A-3.3</span><!-- l. 46 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-close' stretchy='false'>⟩</mo></mstyle></math>
+<!-- l. 47 --><p class='indent'>   <!-- l. 47 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-open' stretchy='false'>⟨</mo></mstyle></math><span class='rm-lmbx-10x-x-109'>Theorem A-3.3</span><!-- l. 47 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-close' stretchy='false'>⟩</mo></mstyle></math>
 <span class='rm-lmbx-10x-x-109'>Field Theorems</span></p></div> 
 <div class='tcolorbox-content'>   <dl class='enumerate-enumitem'><dt class='enumerate-enumitem'>
-1.  </dt><dd class='enumerate-enumitem'><span class='rm-lmbx-10x-x-109'>Size  of  Finite  Field:  </span>Every  finite  field  is  called  a  Galois  Field  and  it  has
-    <!-- l. 43 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>p</mi></mrow><mrow><mi>n</mi></mrow></msup></math>
-    elements for some prime <!-- l. 43 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>p</mi></math>
-   and positive integer <!-- l. 43 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>,
-    conversely, for each <!-- l. 43 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>p</mi></mrow><mrow><mi>n</mi></mrow></msup></math>
-    there exists a finite field of that size (unique up to isomorphism).
+1.  </dt><dd class='enumerate-enumitem'><span class='rm-lmbx-10x-x-109'>Size   of   Finite   Field:  </span>A   finite   field   is   called   Galois   field   and   always   has
+    <!-- l. 44 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>p</mi></mrow><mrow><mi>n</mi></mrow></msup></math>
+    elements (where <!-- l. 44 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>p</mi></math>
+   is a prime and <!-- l. 44 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>
+   is a positive integer).
     </dd><dt class='enumerate-enumitem'>
-2.  </dt><dd class='enumerate-enumitem'><span class='rm-lmbx-10x-x-109'>Isomorphic Fields: </span>Any two finite fields <!-- l. 44 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>𝔽</mi></mrow><mrow><mn>1</mn></mrow></msub></math>
-     and <!-- l. 44 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>𝔽</mi></mrow><mrow><mn>2</mn></mrow></msub></math>
-     with  the  same  number  of  elements  are  isomorphic,  i.e.,  there  exists  a  bijection
-    <!-- l. 44 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>f</mi> <mo class='MathClass-punc' stretchy='false'>:</mo> <msub><mrow><mi>𝔽</mi></mrow><mrow><mn>1</mn></mrow></msub> <mo class='MathClass-rel' stretchy='false'>→</mo> <msub><mrow><mi>𝔽</mi></mrow><mrow><mn>2</mn></mrow></msub></mrow></math>
-     such that for all <!-- l. 44 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>b</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <msub><mrow><mi>𝔽</mi></mrow><mrow><mn>1</mn></mrow></msub></mrow></math>,
-    <!-- l. 44 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>f</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>b</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>f</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>a</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>f</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>b</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
-    and <!-- l. 44 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>f</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi mathvariant='italic'>𝑎𝑏</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>f</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>a</mi><mo class='MathClass-close' stretchy='false'>)</mo><mi>f</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>b</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>.</dd></dl>
+2.  </dt><dd class='enumerate-enumitem'><span class='rm-lmbx-10x-x-109'>Isomorphic Fields: </span>Any two finite fields, <!-- l. 45 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>𝔽</mi></mrow><mrow><mn>1</mn></mrow></msub></math>
+     and <!-- l. 45 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>𝔽</mi></mrow><mrow><mn>2</mn></mrow></msub></math>
+     with       the       same       number       of       elements       are       isomorphic       (i.e.,
+    there         exists         a         bi-jective         one-to-one         mapping         function
+    <!-- l. 45 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>f</mi> <mo class='MathClass-punc' stretchy='false'>:</mo> <msub><mrow><mi>𝔽</mi></mrow><mrow><mn>1</mn></mrow></msub> <mo class='MathClass-rel' stretchy='false'>→</mo> <msub><mrow><mi>𝔽</mi></mrow><mrow><mn>2</mn></mrow></msub></mrow></math>
+     and the algebraic operations <!-- l. 45 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mtext class='MathClass-open' stretchy='false'>(+,⋅)</mtext></mrow></math>
+    preserve          correctness          among          newly          mapped          elements).
+    In         other         words,         there         exists         a         mapping         function
+    <!-- l. 45 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>f</mi> <mo class='MathClass-punc' stretchy='false'>:</mo> <msub><mrow><mi>𝔽</mi></mrow><mrow><mn>1</mn></mrow></msub> <mo class='MathClass-rel' stretchy='false'>→</mo> <msub><mrow><mi>𝔽</mi></mrow><mrow><mn>2</mn></mrow></msub></mrow></math>
+     comprised of the field operators (<!-- l. 45 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mo class='MathClass-bin' stretchy='false'>+</mo></math>,
+    <!-- l. 45 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mo class='MathClass-bin' stretchy='false'>⋅</mo></math>).
+    For such an isomorphic function <!-- l. 45 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>f</mi></math>,
+    for any <!-- l. 45 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>b</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <msub><mrow><mi>𝔽</mi></mrow><mrow><mn>1</mn></mrow></msub></mrow></math>,
+    <!-- l. 45 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>f</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>b</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>f</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>a</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>f</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>b</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>
+    and <!-- l. 45 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>f</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>b</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>f</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>a</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>f</mi><mo class='MathClass-open' stretchy='false'>(</mo><mi>b</mi><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math></dd></dl>
  
 </div> 
 </div>
