deploy: a895a49c3474014acf7bd6c07952c162a9228f1e

--- a/ModuloArithmetic.html
+++ b/ModuloArithmetic.html
@@ -11,7 +11,7 @@
    <!-- l. 369 --><div class='crosslinks'><p class='noindent'>[<a href='BasicMath.html#ModuloArithmetic.html'>parent</a>][<a href='Group.html'>next</a>]</p></div>
    <h3 class='sectionHead' id='modulo-arithmetic'><span class='titlemark'>A-1   </span> <a id='x5-5000A-1'></a>Modulo Arithmetic</h3>
 <!-- l. 2 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>- Reference</span>
-</p><!-- l. 4 --><p class='indent'>   <a href='https://www.youtube.com/watch?v=fz1vxq5ts5I'>YouTube – Extended Euclidean Algorithm Tutorial</a>
+</p><!-- l. 4 --><p class='indent'>   <a href='https://www.youtube.com/watch?v=fz1vxq5ts5I'>YouTube – Extended Euclidean Algorithm Tutorial</a>.
    
 </p>
    <div class='subsectionTOCS hrr'>
