deploy: fb8742ecd26b0376bb85b45901900bba814404df

--- a/Preface.html
+++ b/Preface.html
@@ -66,9 +66,10 @@ draft.
 </p>
    <h5 class='likesubsubsectionHead' id='acknowledgments'><a id='x2-2000'></a>Acknowledgments</h5>
 <!-- l. 305 --><p class='noindent'>Special thanks go to the following researchers: Robin Geelen (KU Leuven, <a href='mailto:robin.geelen@esat.kuleuven.be'>robin.geelen@esat.kuleuven.be</a>),
-for his thoughtful and dedicated feedback; Tianjian Yang (Peking University, <a href='mailto:robin.geelen@esat.kuleuven.be'>2300012738@stu.pku.edu.cn</a>), for
-correcting numerous typos and other errors in the draft; and Yongwoo Lee (Inha University,
-<a href='mailto:yongwoo@inha.ac.kr'>yongwoo@inha.ac.kr</a>), for his general advice.
+for his thoughtful and dedicated feedback; Yongwoo Lee (Inha University, <a href='mailto:yongwoo@inha.ac.kr'>yongwoo@inha.ac.kr</a>), for his
+general advice; Tianjian Yang (Peking University, <a href='mailto:robin.geelen@esat.kuleuven.be'>2300012738@stu.pku.edu.cn</a>), for correcting numerous
+typos and other errors in the draft; and Nolan Carouge (Grenoble INP Ensimag, <a href='mailto:nolan.carouge.pro@gmail.com'>)</a>; for further
+strengthening the theoretical representation of the draft.
 </p><!-- l. 309 --><p class='indent'>
                                                                                          
                                                                                          
