--- a/Setup.html
+++ b/Setup.html
@@ -15,7 +15,7 @@ range, and <!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Ma
 ciphertext range, where <!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>t</mi> <mo class='MathClass-rel' stretchy='false'>&lt;</mo> <mi>q</mi></mrow></math>
 (<!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> is much smaller
 than <!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>). Randomly
-pick a vector <!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>S</mi></math> of
+pick a vector <!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>s</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math> of
 length <!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>k</mi></math> comprising
 <!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>k</mi></math> binary numbers as a
 secret key (denoted as <!-- l. 13 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>S</mi><munderover> <mo class='MathClass-rel' stretchy='false'>←</mo><mrow></mrow><mrow><mi>$</mi></mrow></munderover><msubsup><mrow><mi>ℤ</mi></mrow><mrow><mn>2</mn></mrow><mrow><mi>k</mi></mrow></msubsup></mrow></math>).
